processing RSS feed

--- a/processing_raw_text.ipynb
+++ b/processing_raw_text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "c8aeef2d-a210-4d40-b5da-a8d6d4609266",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "3fa6d907-6695-4682-a7a7-55bbf9485189",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "str"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "0306de7e-db17-4c98-8399-d5874456c7b2",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "110015"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "23471d64-0089-4ef9-a77f-cd65067ec149",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
        "'\\ufeffThe Project Gutenberg eBook of Deadly City\\r\\n    \\r\\nThis ebook is for the us'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "d1fdfd79-e8b3-4d27-8024-bb7a09d5b858",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "list"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "7bdb5f9a-d30d-4476-aad4-1d7915f837e8",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "23472"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "899e6696-223a-420d-b817-4d993013e040",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        " 'is']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "2e5234aa-a96a-40e4-b210-f582efdc5d7c",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "nltk.text.Text"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "a33f3ad3-091c-4717-a7bc-f99750d66edf",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        " 'and']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "3e36004c-cf0c-482c-8b90-fefd148fa7f6",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "da11690c-6c13-4d19-88dc-392242cba5af",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "873"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "707775d3-67bd-4cc5-96c5-4be0d7750a68",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "91186"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,17 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "6031ae8f-64db-469d-854e-083669aafaad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "a7318095-3be2-4762-84d7-c984bed21859",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "b'<!doctype html public \"-//W3C//DTD HTML 4.0 Transitional//EN'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "a21153e8-51bd-43ae-b8c4-a174dd2c1db2",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "['BBC', 'NEWS', '|', 'Health', '|', 'Blondes', \"'to\", 'die', 'out', 'in']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "079a447a-c991-4f47-ba90-1457c5254a89",
    "metadata": {},
    "outputs": [
@@ -411,9 +411,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c914ee96-509e-4217-9622-08c90a7afc77",
+   "metadata": {},
+   "source": [
+    "### Processing RSS Feed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f6d8816d-6410-4b9c-b75f-a23c1a595e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Language Log'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import feedparser\n",
+    "\n",
+    "llog = feedparser.parse(\"http://languagelog.ldc.upenn.edu/nll/?feed=atom\")\n",
+    "llog['feed']['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "10da681e-0923-45cc-8dd9-e04d3aaceb4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(llog.entries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cff48021-e24e-4bbd-ab70-2c95bc57745a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pronunciation guides fail spectacularly'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "post = llog.entries[2]\n",
+    "post.title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9567f389-3c48-4d04-8731-fc18d4a055dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<p>ICYMI:</p>\\n<p></p>\\n<p><span id=\"more-64715\"></span></p>\\n<p>Jonathan'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content = post.content[0].value\n",
+    "content[:70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2461e1d9-4e88-4a86-a7f2-91b40fc91e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw = BeautifulSoup(content).get_text()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb14fa5c-4a0f-4dc2-98ba-31f40afe7bdc",
+   "id": "5c2b25a3-2b4f-4c4d-82fc-ed85d9ed35dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -435,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
