Implement a lookup tagger

--- a/pos_tagging.ipynb
+++ b/pos_tagging.ipynb
@@ -117,9 +117,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69920659-da50-4c7a-b85f-0cdc60d2606f",
+   "metadata": {},
+   "source": [
+    "## Lookup Tagger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ff6d3c62-f6e1-483c-9197-7ce0dfe898a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/sp/fs0xt2yd4mb2xff7qvtwy9000000gn/T/ipykernel_75855/941094730.py:6: DeprecationWarning: \n",
+      "  Function evaluate() has been deprecated.  Use accuracy(gold)\n",
+      "  instead.\n",
+      "  baseline_tagger.evaluate(brown_tagged_sents)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.46063806511923944"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fd = nltk.FreqDist(brown.words(categories=\"news\"))\n",
+    "cfd = nltk.ConditionalFreqDist(brown.tagged_words(categories='news'))\n",
+    "most_freq_words = list(fd.keys())[:100]\n",
+    "likely_tags = dict((word, cfd[word].max()) for word in most_freq_words)\n",
+    "baseline_tagger = nltk.UnigramTagger(model = likely_tags, backoff = nltk.DefaultTagger('NN'))\n",
+    "baseline_tagger.evaluate(brown_tagged_sents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c43214c6-6ae1-49a3-8054-6ad33caff351",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('``', '``'),\n",
+       " ('Only', 'RB'),\n",
+       " ('a', 'AT'),\n",
+       " ('relative', 'JJ'),\n",
+       " ('handful', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('such', 'JJ'),\n",
+       " ('reports', 'NNS'),\n",
+       " ('was', 'BEDZ'),\n",
+       " ('received', 'VBD'),\n",
+       " (\"''\", \"''\"),\n",
+       " (',', ','),\n",
+       " ('the', 'AT'),\n",
+       " ('jury', 'NN'),\n",
+       " ('said', 'VBD'),\n",
+       " (',', ','),\n",
+       " ('``', '``'),\n",
+       " ('considering', 'IN'),\n",
+       " ('the', 'AT'),\n",
+       " ('widespread', 'JJ'),\n",
+       " ('interest', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('the', 'AT'),\n",
+       " ('election', 'NN'),\n",
+       " (',', ','),\n",
+       " ('the', 'AT'),\n",
+       " ('number', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('voters', 'NNS'),\n",
+       " ('and', 'CC'),\n",
+       " ('the', 'AT'),\n",
+       " ('size', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('this', 'DT'),\n",
+       " ('city', 'NN'),\n",
+       " (\"''\", \"''\"),\n",
+       " ('.', '.')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent = brown.sents(categories='news')[3]\n",
+    "baseline_tagger.tag(sent)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e97c32f-e8f4-463b-b325-2a004e3f0f40",
+   "id": "5715a27b-ffa9-4f64-87be-840c446e6cc5",
    "metadata": {},
    "outputs": [],
    "source": []
